--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ django = "^5.0.6"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.9"
 pillow = "^10.3.0"
+django-apscheduler = "^0.6.2"
+crispy-bootstrap4 = "^2024.1"
+redis = "^5.0.4"
+django-crontab = "^0.7.1"
+pytz = "^2024.1"
+django-bootstrap-datepicker-plus = "^5.0.5"
 
 
 [build-system]
